[tool.poetry]
name = "feedhandler"
version = "0.1.0"
description = ""
authors = ["Zhenya Kovalyov <github.compound383@passinbox.com>"]
license = "MIT"
repository = "https://github.com/zhenyakovalyov/async-rto-feed-handler.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = { extras = ["speedups"], version = "^3.9.5" }
websockets = "^12.0"
orjson = "^3.10.3"
uvloop = "^0.19.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.4"
pytest = "^8.2.0"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    '*.ipynb',
]

# extend-include = ["*.ipynb"]

# Same as Black.
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "C4", "B", "UP", "SIM", "I"] #D for pydocs
ignore = []

# Allow fix for all enabled rules is provided.
fixable = ["ALL"]
unfixable = ["B"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
